--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     hola clase 6...
-    <div id="myButton">
+    <div id="myApp">
         <!-- mi place holder para meter componentes programaticamente -->
     </div>
     <script type="module" src="./js/app.js"></script>
