--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <div id="myApp">
         <!-- mi place holder para meter componentes programaticamente -->
     </div>
-    <script type="module" src="./js/app.js"></script>
+    <ul>
+        <li>
+            item 1
+        </li>
+        <li>
+            item 4
+        </li>
+        <li>
+            item 1
+        </li>
+        <li>
+            item 3
+        </li>  
+        <li>
+            item 5
+        </li>
+    </ul>
+        <script type="module" src="./js/app.js"></script>
 </body>
 </html>
